--- a/supp.tex
+++ b/supp.tex
@@ -22,7 +22,7 @@ MNIST Captions & 32 & 300 & 300 & 150 & 8 & 8\\
 %\vspace{-0.3cm}
 \end{table}
 
-The GAN model trained on residuals which was used for sharpening had the same configuration as the $28 \times 28$ model trained by \cite{denton_lapgan} on residuals of CIFAR dataset, that can be found at \url{https://gist.github.com/soumith/e3f722173ea16c1ea0d9}. The model was trained for $6$ epochs.
+The LAPGAN model used for sharpening had the same configuration as the $28 \times 28$ model trained by \cite{denton_lapgan} on the edge residuals of CIFAR dataset.  that can be found at \url{https://gist.github.com/soumith/e3f722173ea16c1ea0d9}. The model was trained for $6$ epochs.
 
 \subsection{Evaluation}
 
