--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -505,8 +505,9 @@ alignDRAW & 3.0 & 14.0 & 22.9 & 68.5 & 31 & 0.156 & 6.99 \\ % 0.924 & 6.216 & 11
 
 \section{Discussion}
 
-We showed that our proposed model managed to generate reasonably looking images corresponding to respective captions as well as managed to generalize to completely novel scenarios which are very unlikely to occur in real life. Sequential generation of images over the number of steps using an attention mechanism has played an important part in this process. However, the tendency of the conditional DRAW models to underfit on the training data has resulted in blurry samples. 
-As a result, the samples were sharpened by a LAPGAN trained on the residuals of the images. Unfortunately, this is not a quite satisfying solution due to the fact that the whole model wasn't trained in an end-to-end fashion. We think that a further extension of the capabilities of the sequential generation of images might help the variational models better fit the data and escape the curse of blurriness.
+In this paper, we have demonstrated that our alignDraw model, a combination of a sequential variational autoencoder and a alignment model over words, succeeds in generating images that correspond to a given input caption. By making extensive use of attentional mechanisms, our model gains several advantages. Namely, the use of the visual attention mechanism allows us to decompose the problem of image generation into a series of steps instead of a single forward pass, while the attention over words can provide us insight whenever our model fails to generate a relevant image. Additionally, because our model conditions on unstructured textual descriptions, we can generate images corresponding to captions that generalize beyond the training set such as sentences describing completely novel scenarios which are highly unlikely to occur in real life. 
+Because we have observed that the alignDraw model tends to output slightly blurry samples, likely due to underfitting on the training data, we augmented the model with a sharpening post-processing step in which a LAPGAN generates edges that are added to the alignDraw samples. 
+Unfortunately, this is not an ideal solution due to the fact that the whole model is not trained in an end-to-end fashion. Therefore a direction of future work would be to find methods that can the bypass the separate post-processing step and output sharp images directly in an end-to-end manner. 
 
 \section{Acknowledgements}
 We would like to thank developers of Theano \citep{theano} for a powerful software and authors of \citep{denton_lapgan} for open sourcing their code. We would also like to thank Ryan Kiros and Nitish Srivastava for helpful discussions. We will be releasing our code with pretrained models as soon as we clean it.
