--- a/iclr-paper.bib
+++ b/iclr-paper.bib
@@ -240,3 +240,20 @@
   volume    = {abs/1211.5590},
   year      = {2012}
 }
+
+@article{gers_forget,
+  author    = {Felix Gers and
+               J{\"u}rgen Schmidhuber and
+               Fred Cummins},
+  title     = {Learning to forget: Continual prediction with LSTM},
+  journal   = {Neural Computation},
+  year      = {2000}
+}
+
+@article{hochreiter_lstm,
+  author    = {Sepp Hochreiter and
+               J{\"u}rgen Schmidhuber},
+  title     = {Long short-term memory},
+  journal   = {Neural Computation},
+  year      = {1997}
+}
